--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -129,7 +129,7 @@
                             <img src="img/blog-details.jpg" alt="blog">
                         </div>
                         <div class="reser-blog">
-                            <a href="news.html">
+                            <a href="#">
                                 <h3 class="grey pt-20 pt-md-3">Association Segmentation</h3>
                             </a>
                         </div>
@@ -141,16 +141,150 @@
                             </ul>
 
                         </div>
-                        <p class="para-color-2 align-left text-11 mb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed ultrices augue, at tempus velit. Pellentesque vel eros a lacus aliquam euismod faucibus eget elit. Nam vulputate semper nunc, eu ultrices dui faucibus vel. Cum sociis
-                            natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam ac est felis. Aenean faucibus neque non dui molestie, id consequat urna gravida. Vestibulum ut lobortis augue, at interdum dui. Praesent at
-                            laoreet turpis.</p>
-                        <p class="para-color-2 align-left text-11 mb-20">Praesent eget elit aliquet, varius mauris vel, bibendum ligula. Nunc finibus sem non odio auctor, eu bibendum orci semper. Phasellus luctus, orci ac placerat luctus, leo nibh imperdiet augue, a cursus erat leo id tellus. Etiam
-                            vel neque felis. Pellentesque eu eros sit amet purus sollicitudin pulvinar. Fusce elementum, quam non sodales pharetra, nisl est bibendum urna, non ultricies odio ante rhoncus augue. Morbi sollicitudin mi eu lacus gravida,
-                            eget mattis diam imperdiet. Nulla finibus dignissim cursus.</p>
-                        <blockquote class="blockquote grey"><i class="fa fa-quote-left"></i> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</blockquote>
 
-                        <p class="para-color-2 align-left text-11 mb-20">n sit amet mollis orci, a vehicula est. Mauris ut odio blandit, commodo est nec, finibus quam. Aliquam vel pulvinar metus. Quisque vel dignissim metus, in tincidunt leo. In ex lectus, fermentum vel dui nec, venenatis porta tortor.
-                            Aenean lacus libero, volutpat at justo ut, eleifend.</p>
+                        <h3 class="pt-8 max-237">What is value?</h3>
+                        <br>
+                        <p class="para-color-2 align-left text-11 mb-20">There are many definitions for value, but a simple answer can be Value = ROI. The reality is more complicated than this.
+                        </p>
+                        <p class="para-color-2 align-left text-11 mb-20">For association, you have to be able to identify what the members get from being a member.
+                        </p>
+                        <p class="para-color-2 align-left text-11 mb-20">On the one hand, it is at the individual level. Members and prospective members receive value from the benefits they can get from the association.
+                        </p>
+
+
+                        <blockquote class="blockquote grey"><i class="fa fa-quote-left"></i>The critical point here is that since the factors that define value are diverse, ‘one size fits all’ value will never be adequate. You have to consider ‘what’ benefits ‘which group’ of your members.
+                            Segmentation will play a crucial role here.</blockquote>
+
+
+                        <p class="para-color-2 align-left text-11 mb-20">On the other hand, at the collective level. Value is driven by the benefits your association can provide to the industry, not only for the paying members. For example, you engaged in advocacy work on behalf of your industry. If
+                            this happens, do not forget to mention the impact you make on the greater collective. These are great moments to build a brand and create awareness.
+                        </p>
+                        <p class="para-color-2 align-left text-11 mb-20">Members of a successful association will feel that the total membership experience combines personal benefits from the association and the contribution to something greater than themselves.
+                        </p>
+
+
+
+
+
+
+
+
+
+                        <!--
+                        <blockquote class="blockquote grey"><i class="fa fa-quote-left"></i> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</blockquote>
+-->
+
+
+
+
+
+                        <!-- start edit form -->
+
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="title d-inline-block">
+                                    <br><br><br><br><br>
+                                    <h5 style="color: #2c3459;" class="mb-3 text-capitalize">Please reachout if you have questions or are interested in the results.</h5>
+                                    <!--<h2 class="text-capitalize gradient-text1">Get In Touch</h2>-->
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+
+
+
+                        <form class="contact-form" autocomplete="false" role="form" method="post" action="https://app.kaicooke.com/form/submit?formId=1" id="mauticform_kaicookecontact" data-mautic-form="kaicookecontact" enctype="multipart/form-data">
+
+                            <div class="row">
+                                <div class="col-md-12 col-sm-12">
+                                    <div class="mauticform-error" id="mauticform_kaicookecontact_error"></div>
+                                </div>
+                                <div class="col-md-12 col-sm-12">
+                                    <div class="mauticform-message" id="mauticform_kaicookecontact_message"></div>
+                                </div>
+                                <!--<div class="mauticform-innerform">
+
+
+                        <div class="mauticform-page-wrapper mauticform-page-1" data-mautic-form-page="1">-->
+
+                                <div class="col-md-6 col-sm-6">
+
+                                    <div id="mauticform_kaicookecontact_firstname" data-validate="firstname" data-validation-type="text" class="form-group mauticform-row mauticform-text mauticform-field-1 mauticform-required">
+                                        <input id="mauticform_input_kaicookecontact_firstname" name="mauticform[firstname]" value="" placeholder="First Name:" class="form-control mauticform-input" type="text">
+                                        <span class="mauticform-errormsg" style="display: none;">Please fill in your first name</span>
+                                    </div>
+
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+
+                                    <div id="mauticform_kaicookecontact_lastname" data-validate="lastname" data-validation-type="text" class="form-group mauticform-row mauticform-text mauticform-field-2 mauticform-required">
+                                        <input id="mauticform_input_kaicookecontact_lastname" name="mauticform[lastname]" value="" placeholder="Last Name:" class="form-control mauticform-input" type="text">
+                                        <span class="mauticform-errormsg" style="display: none;">Please fill in your last name</span>
+                                    </div>
+
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+
+                                    <div id="mauticform_kaicookecontact_email" data-validate="email" data-validation-type="email" class="form-group mauticform-row mauticform-email mauticform-field-3 mauticform-required">
+                                        <input id="mauticform_input_kaicookecontact_email" name="mauticform[email]" value="" placeholder="Email:" class="form-control mauticform-input" type="email">
+                                        <span class="mauticform-errormsg" style="display: none;">Please fill in your email</span>
+                                    </div>
+
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+
+                                    <div id="mauticform_kaicookecontact_phone" class="form-group mauticform-row mauticform-tel mauticform-field-4">
+                                        <input id="mauticform_input_kaicookecontact_phone" name="mauticform[phone]" value="" placeholder="Phone:" class="form-control mauticform-input" type="tel">
+                                        <span class="mauticform-errormsg" style="display: none;"></span>
+                                    </div>
+
+                                </div>
+                                <div class="col-md-12 col-sm-12">
+
+                                    <div id="mauticform_kaicookecontact_f_message" data-validate="f_message" data-validation-type="textarea" class="form-group mauticform-row mauticform-text mauticform-field-5 mauticform-required">
+                                        <textarea placeholder="Message" id="mauticform_input_kaicookecontact_f_message" name="mauticform[f_message]" class="form-control mauticform-textarea"></textarea>
+                                        <span class="mauticform-errormsg" style="display: none;">Please write your message</span>
+                                    </div>
+
+                                </div>
+                                <div class="col-md-12 col-sm-12">
+
+                                    <div id="mauticform_kaicookecontact_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-6">
+
+                                        <!--
+                            <button type="button" class="contact_btn btn btn-rounded btn-large btn-green mt-30" id="submit_btn"><i class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i> <span class="text-capitalize">Contact Now</span></button>
+                            -->
+
+                                        <button type="submit" name="mauticform[submit]" id="mauticform_input_kaicookecontact_submit" value="" class="contact_btn btn btn-rounded btn-large btn-green mt-30 mauticform-button-org btn btn-default"><i class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i> <span class="text-capitalize">Contact Now</span></button>
+                                    </div>
+
+                                </div>
+
+                                <!--</div>
+                        </div>
+                        -->
+
+
+                                <input type="hidden" name="mauticform[formId]" id="mauticform_kaicookecontact_id" value="1">
+                                <input type="hidden" name="mauticform[return]" id="mauticform_kaicookecontact_return" value="">
+                                <input type="hidden" name="mauticform[formName]" id="mauticform_kaicookecontact_name" value="kaicookecontact">
+
+                            </div>
+
+                        </form>
+
+
+
+
+
+
+                        <!-- end edit form -->
+
+
+
 
                     </article>
                     <div style="display: none;" class="post-shareit share-center text-11">
@@ -188,6 +322,7 @@
         </div>
     </section>
     <!-- our client end -->
+
 
 
     <!--Footer Start-->
@@ -258,6 +393,58 @@
     <script src="js/maps.min.js"></script>
     -->
     <script src="js/script.js"></script>
+
+
+
+
+
+
+
+    <!-- mautic form -->
+
+    <script type="text/javascript">
+        /** This section is only needed once per page if manually copying **/
+        if (typeof MauticSDKLoaded == 'undefined') {
+            var MauticSDKLoaded = true;
+            var head = document.getElementsByTagName('head')[0];
+            var script = document.createElement('script');
+            script.type = 'text/javascript';
+            script.src = 'https://app.kaicooke.com/media/js/mautic-form.js';
+            script.onload = function() {
+                MauticSDK.onLoad();
+            };
+            head.appendChild(script);
+            var MauticDomain = 'https://app.kaicooke.com';
+            var MauticLang = {
+                'submittingMessage': "Please wait..."
+            }
+        } else if (typeof MauticSDK != 'undefined') {
+            MauticSDK.onLoad();
+        }
+    </script>
+
+
+    <!-- mautic form -->
+
+
+
+    <!-- mautic tracking -->
+    <script>
+        (function(w, d, t, u, n, a, m) {
+            w['MauticTrackingObject'] = n;
+            w[n] = w[n] || function() {
+                    (w[n].q = w[n].q || []).push(arguments)
+                }, a = d.createElement(t),
+                m = d.getElementsByTagName(t)[0];
+            a.async = 1;
+            a.src = u;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://app.kaicooke.com/mtc.js', 'mt');
+
+        mt('send', 'pageview');
+    </script>
+    <!-- mautic tracking end -->
+
 
 </body>
 
