--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h4 class="">Number of respondents</h4>
+                    <h4 style="display: none;" class="">Number of respondents</h4>
                     <h2>Research project</h2>
                     <p class="about-max pt-10">Project code<br><br><br><br></p>
                 </div>
@@ -459,28 +459,28 @@
             <div class="row">
                 <div class="col-md-3 padding-50">
                     <div class="serial-box">
-                        <span class="count">750</span>
+                        <span style="display: none;" class="count">750</span>
                         <p>Association Segmentation</p>
                         <h4 class="project-code pt-10"><a style="color: #e25111;" href="Research-Project-Kai.Cooke.Asse.html">Kai.Cooke.Asse</a></h4>
                     </div>
                 </div>
                 <div class="col-md-3 padding-50">
                     <div class="serial-box">
-                        <span class="count">950</span>
+                        <span style="display: none;" class="count">950</span>
                         <p>Virtual events and ROI</p>
                         <h4 class="project-code pt-10">Kai.Cooke.Vien</h4>
                     </div>
                 </div>
                 <div class="col-md-3 padding-50">
                     <div class="serial-box">
-                        <span class="count">1250</span>
+                        <span style="display: none;" class="count">1250</span>
                         <p>Micro networks</p>
                         <h4 class="project-code pt-10">Kai.Cooke.Mine</h4>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="serial-box">
-                        <span class="count">450</span>
+                        <span style="display: none;" class="count">450</span>
                         <p>Association Technology</p>
                         <h4 class="project-code pt-10">Kai.Cooke.Aste</h4>
                     </div>
