--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -126,7 +126,7 @@
                 <div class="col-12 col-lg-8">
                     <article class="blog_item heading_space item_padding">
                         <div class="image-blog pb-20">
-                            <img src="img/blog-details.jpg" alt="blog">
+                            <img src="img/about-cover.jpg" alt="blog">
                         </div>
                         <div class="reser-blog">
                             <a href="#">
@@ -142,25 +142,25 @@
 
                         </div>
 
-                        <h3 class="pt-8 max-237">What is value?</h3>
+                        <h3 class="pt-8 max-237">What is value for who?</h3>
                         <br>
-                        <p class="para-color-2 align-left text-11 mb-20">There are many definitions for value, but a simple answer can be Value = ROI. The reality is more complicated than this.
+                        <p class="para-color-2 align-left text-11 mb-20">There are many definitions for value, but a simple answer can be Value = ROI. The reality is more complicated than this. For association, you have to be able to identify what the members get from being a member.
                         </p>
-                        <p class="para-color-2 align-left text-11 mb-20">For association, you have to be able to identify what the members get from being a member.
-                        </p>
-                        <p class="para-color-2 align-left text-11 mb-20">On the one hand, it is at the individual level. Members and prospective members receive value from the benefits they can get from the association.
+                        <p class="para-color-2 align-left text-11 mb-20">
+                            The critical point here is that since the factors that define value are diverse, the ‘one size fits all’ value will never be adequate. You have to consider ‘what’ benefits ‘which group’ of your members. Segmentation will play a crucial role here.
                         </p>
 
 
-                        <blockquote class="blockquote grey"><i class="fa fa-quote-left"></i>The critical point here is that since the factors that define value are diverse, ‘one size fits all’ value will never be adequate. You have to consider ‘what’ benefits ‘which group’ of your members.
-                            Segmentation will play a crucial role here.</blockquote>
-
-
-                        <p class="para-color-2 align-left text-11 mb-20">On the other hand, at the collective level. Value is driven by the benefits your association can provide to the industry, not only for the paying members. For example, you engaged in advocacy work on behalf of your industry. If
-                            this happens, do not forget to mention the impact you make on the greater collective. These are great moments to build a brand and create awareness.
+                        <p class="para-color-2 align-left text-11 mb-20">Segmentation should result in tailored programs, activities, and communication approaches that match the members’ needs.
                         </p>
-                        <p class="para-color-2 align-left text-11 mb-20">Members of a successful association will feel that the total membership experience combines personal benefits from the association and the contribution to something greater than themselves.
+                        <p class="para-color-2 align-left text-11 mb-20">Nonetheless, not every association can do segmentation nor fully benefit from it.
                         </p>
+
+                        <br><br>
+
+                        <blockquote class="blockquote grey"><i class="fa fa-quote-left"></i>This research investigates the current state of associations’ membership segmentation: the reasons for segmentation, the value, and benefits of segmentation, its cost, and the result of segmentation.
+                        </blockquote>
+
 
 
 
