--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -144,7 +144,7 @@
 
                         <h3 class="pt-8 max-237">What is value for who?</h3>
                         <br>
-                        <p class="para-color-2 align-left text-11 mb-20">There are many definitions for value, but a simple answer can be Value = ROI. The reality is more complicated than this. For association, you have to be able to identify what the members get from being a member.
+                        <p class="para-color-2 align-left text-11 mb-20">There are many definitions for value, and a simple answer can be Value = ROI. The reality is more complicated than this. For association, you have to be able to identify what the members get from being a member.
                         </p>
                         <p class="para-color-2 align-left text-11 mb-20">
                             The critical point here is that since the factors that define value are diverse, the ‘one size fits all’ value will never be adequate. You have to consider ‘what’ benefits ‘which group’ of your members. Segmentation will play a crucial role here.
