--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -343,7 +343,7 @@
                             <li><a class="wow fadeInDown linkedin-bg-hvr" href="https://www.linkedin.com/in/kaicooke/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
-                    <p class="company-about fadeIn text-capitalize">© 2020 KaiCooke. Made With Love By <a href="javascript:void(0);">RobertCooke</a></p>
+                    <p class="company-about fadeIn text-capitalize">© 2020 KaiCooke | 10685-B Hazelhurst Dr. # 30606, Houston, TX 77043 <br> <span style="font-size: 70%;">Please use the above address to send in paper questionnaires</span> </p>
                 </div>
             </div>
         </div>
